<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/action_sign_in"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Användarnamn_eller_Email"
        android:id="@+id/editText" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/Lösenord"
        android:id="@+id/editText2" />

    <Button
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:textColor="#FFFFFF"
        android:text="@string/Logga_in"
        android:onClick="login"
        android:id="@+id/button2" />

    <Button
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="@drawable/buttonshape"
        android:text="@string/Registrera"
        android:onClick="register"
        android:id="@+id/button3" />
</LinearLayout>